# spritely

./: README.md  pyproject.toml  tox.ini
tests/: test_it.py
tests/resources/: app_config.yaml
